# QRCodes

./: .gitignore  CMakeLists.txt  LICENSE  README.md
QRCode_Mac/QRCode_Mac/: alphabet.cpp  data_extractor.cpp  data_extractor.hpp  dot_detector.cpp  dot_detector.hpp  main.cpp  qr_image_extractor.cpp
QRCode_Mac/QRCode_Mac.xcodeproj/: project.pbxproj
QRCode_Mac/QRCode_Mac.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
QRCode_Mac/QRCode_Mac/reedsolomon/: GenericGF.cpp  GenericGF.h  ReedSolomon.cpp  ReedSolomonDecoder.cpp  ReedSolomonException.cpp
QRCode_iOS/: Podfile
QRCode_iOS/QRCode_iOS/: AppDelegate.h  AppDelegate.m  QRCodeDrawer.h  QRCodeDrawer.mm  QRDisplayController.h  QRDisplayController.m  ViewController.h  ViewController.mm  main.m
QRCode_iOS/QRCode_iOS.xcodeproj/: project.pbxproj
QRCode_iOS/QRCode_iOS.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
QRCode_iOS/QRCode_iOS.xcworkspace/: contents.xcworkspacedata
QRCode_iOS/QRCode_iOS/Base.lproj/: Main.storyboard
QRCode_iOS/QRCode_iOS/Camera/: Camera.h  Camera.mm  UIView+Mat.h  UIView+Mat.mm
QRCode_iOS/QRCode_iOS/Helpers/: fps.cpp  fps.hpp
qr/: alphabet.cpp  alphabet.hpp  dot_detector.cpp  dot_detector.hpp  image_data_extractor.cpp  image_data_extractor.hpp  process_qr.cpp  process_qr.hpp  qr_data_coder.cpp  qr_data_coder.hpp  qr_image_extractor.hpp
qr/reedsolomon/: Array.h  Counted.h  GenericGFPoly.cpp  GenericGFPoly.h  ReedSolomon.h  ReedSolomonDecoder.h  ReedSolomonEncoder.cpp  ReedSolomonEncoder.h  ReedSolomonException.h
(+3 files in other folders)
